K8S-Files/Networking/BackEnd-DB-NetworkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hms-db-network-policy
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: hms-db-pod
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: hms-backend-pod
      ports:
        - protocol: TCP
          port: 3306
