K8S-Files/Networking/DB-Backend-NetworkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hms-backend-egress-policy
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: hms-backend-pod
  policyTypes:
    - Egress
  egress:
    - to: 
        - podSelector:
            matchLabels:
              app: hms-db-pod
      ports:
        - protocol: TCP
          port: 3306
    - to: []
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
